<?xml version="1.0"?>
<package format="2">
  <name>airosa_controller</name>
  <version>0.0.0</version>
  <description>The airosa_controller package</description>

  <!-- Maintainer -->
  <maintainer email="airosa@todo.todo">airosa</maintainer>

  <!-- License -->
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <depend>airosa_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <exec_depend>python3</exec_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <depend>std_msgs</depend>

  <!-- Optional but clean -->
  <export/>
</package>
