<?xml version="1.0"?>
<package format="2">
  <name>imu_to_odom</name>
  <version>0.0.0</version>
  <description>Calculate odometry from IMU (e.g., BNO055) data and publish it on the /odom topic</description>

  <author email="your_email@example.com">Your Name</author>
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>BSD</license>

  <!-- Build system tools -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Export (for other packages to use your package's functionality) -->
  <export>
  </export>
</package>

